Opened 14 years ago

Closed 14 years ago

#7026 closed bug (fixed)

Haiku bootloader resets Dell Inspiron B130

Reported by: umccullough Owned by: axeld
Priority: normal Milestone: R1
Component: System/Boot Loader Version: R1/alpha2
Keywords: bootloader reset reboot Cc:
Blocked By: Blocking:
Platform: All

Description

While trying to install Haiku hrev39939 gcc2hybrid on 3rd primary partition of an Inspiron B130 laptop, I was unable to get it to chainload from grub. The stage 1 loads, but I can never get to the boot menu holding down the Space key.

I was, however, able to get a little debug output by holding down ESC after the bootloader starts, but I had to use a video camera to capture it since it flies by so quickly. Attached is a screenshot from the video I took showing the output before it reboots.

Next steps to debug?

Attachments (1)

vlcsnap-2010-12-25-15h27m50s187.png (334.9 KB ) - added by umccullough 14 years ago.
Snapsot from video of bootloader debug output

Download all attachments as: .zip

Change History (6)

by umccullough, 14 years ago

Snapsot from video of bootloader debug output

comment:1 by umccullough, 14 years ago

Transcribed output (hopefully) from the picture:

No APM available
smp: using ACPI to detect MP configuration
smp: local apic address is 0xfee00000
smp: found local APIC with id 0
smp: found local APIC with id 1
smp: APICis disabled andwill not be used
smp: found io APID with id 1 and address 0xfec00000
Last edited 14 years ago by umccullough (previous) (diff)

comment:2 by umccullough, 14 years ago

I found a bunch old USB sticks with different revisions of Haiku on them - some boot on this laptop, some reset.

I was able to get hrev34427 to boot, while hrev35141 fails.

I will continue to bisect revisions between these until I find the culprit.

comment:3 by umccullough, 14 years ago

Further bisecting of raw images from haiku-files.org leads me to the conclusion that hrev34934 works, but hrev35081 fails.

Time to dig the commits.

comment:4 by umccullough, 14 years ago

Narrowed down to hrev34948 as the culprit.

Looks like an ACPI tweak.

comment:5 by mmlr, 14 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev39961.

Note: See TracTickets for help on using tickets.